--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -4,11 +4,12 @@
 
     <script language="javascript">
       function validate() {
-        let pw1 = document.getElementById("pw1").value;
-        let pw2 = document.getElementById("pw2").value;
-        let uid = document.getElementById("uid").value;
+        let email=documnet.getElementById("email").value;
+        let password = document.getElementById("password").value;
+        let password2 = document.getElementById("password2").value;
+        let name = document.getElementById("name").value;
 
-        if (pw1 != pw2) {
+        if (password != password2) {
           alert("암호가 서로 다릅니다. 다시입력하세요");
           return false;
         }
@@ -26,22 +27,22 @@
         <h5> Join update</h5> <hr>
       </div>
 
-     <form name=join onsubmit="return validate()" method=post action="/users/up_info">
+     <form name=join onsubmit="return validate()" method=post action=<%=routes.editProfile %>>
        <div class="form-group">
          <label for="exampleInputEmail1">UserId</label>
-         <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" value="">
+         <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" value=<%=profile.email %>>
        </div>
        <div class="form-group">
          <label for="exampleInputPassword1">Password</label>
-         <input type="password" class="form-control" name="password" id="password" value="">
+         <input type="password" class="form-control" name="password" id="password" value=<%=profile.password %>>
        </div>
        <div class="form-group">
          <label for="exampleInputPassword2">Password one more</label>
-         <input type="password" class="form-control" name="password2" id="password2"value="">
+         <input type="password" class="form-control" name="password2" id="password2"value=<%=profile.password2 %>>
        </div>
        <div class="form-group">
          <label for="exampleInputEmail1">UserName</label>
-         <input type="text" class="form-control" name="name" id="name" value="">
+         <input type="text" class="form-control" name="name" id="name" value=<%=profile.name %>>
        </div>
        
          <hr>
